<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFD6E8"

    tools:context=".ui.LoginActivity"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/doctor"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="95dp"

                android:contentDescription="TODO">

            </ImageView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="40sp"
                />



            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="Autofill,MissingConstraints,RtlSymmetry"
                />

            <Button
                android:id="@+id/login"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:text="@string/login"
                android:layout_marginStart="100dp"
                android:background="@drawable/button_background"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="17sp"
                />




            <TextView
                android:layout_width="250dp"
                android:layout_height="22dp"
                android:layout_marginTop="90dp"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/txt"
                android:textSize="20sp"

                android:layout_marginStart="90dp"
                />

            <TextView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:layout_marginLeft="150dp"
                android:text="@string/sign_up"
                android:layout_marginRight="150dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>



    </LinearLayout>


</ScrollView>